--- a/dyplomWFAMarcinPietrzak.tex
+++ b/dyplomWFAMarcinPietrzak.tex
@@ -93,9 +93,9 @@ Wydział Fizyki i Astronomii\\
 
 \Large Marcin Pietrzak \\
 \vspace{3.2cm}
-\Large Galeria modeli komputerowych \\
+\Large Galeria modeli komputerowych w silniku Unreal \\
 \vspace{1.5cm}
-Computer models gallery
+Computer models gallery in Unreal Engine
 \end{center}
 \vspace{3.7cm}
 \begin{flushright}
@@ -139,7 +139,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
 
 \subsection{Wprowadzenie}
 
-W ciągu ostatnich 10 lat rynek gogli VR zaczął się budzić na nowo dzięki jednemu z ojców założycieli firmy Oculus, Palmer Luckey. Wieku 16 lat zaczął budować swoje pierwsze gogle VR, a kilka lat później założył firmę Oculus i dzięki udanej zbiórce na Kickstarterze jego firma miała fundusze stworzyć swoje pierwsze sklepowe gogle. Po drodze firma wypuściła kilka prototypów dla deweloperów. Sama firma została przejęta przez Facebooka, dzisiaj znana jako Meta, za 2 miliardy dolarów w 2014 roku. Ich pierwsze komercyjne gogle, Oculus Rift, zostały wydane w 2016 roku i kosztowały na start 599 USD. W 2017 roku z firmą pożegnał się Palmer Luckey, a obecnie zajmuję się firmą tworzącą technologię obronne. Natomiast kolejnym komercyjnym sprzętem Oculusa był Oculus Go wydanym w 2018 roku jako sprzęt all-in-one, czyli nie wymagały zewnętrznych urządzeń czy przewodów do działania. Gogle dzięki braku potrzeby podłączania komputera czy smartfonu, gogle okazały się ogromną innowacją na rynku sprzętu VR. Koszt gogli zaczynał się od 199 USD w dniu premiery. W kolejnym roku zostały wydane dwa nowe rodzaje gogli. Pierwszym był następca Oculusa Rifta, czyli Oculus Rift S kosztującym 400 USD. Podobnie jak jego poprzednik były stworzone zmyślą o PCVR. Recenzentom sprzęt też nie przypadł do gustu, zarzucając mu zbyt małą ilość innowacji od poprzedniej wersji. Inaczej było z drugim produktem, który wypuścili w podobnym czasie czyli Oculus Quest. Cena premierowa zaczynała się od 399 USD. Quest podobnie jak jego poprzednik nie wymagał żadnych dodatkowych urządzeń do działania. Dzięki dość niskiej cenie, jak za możliwości które oferowały gogle, okazały się one ogromnym sukcesem dla Oculusa na tyle ogromnym, że zaczęły one powoli wypychać swojego brata Rift S z rynku, a gwoździem do trumny dla Rift S było ogłoszenie przez Oculusa, że można będzie Questa podłączyć do PC i korzystać z nich jak Rift S. Sam Oculus od tego momentu zaczął tworzyć tylko gogle autonomiczne. 
+W ciągu ostatnich 10 lat rynek gogli VR zaczął się budzić na nowo dzięki jednemu z ojców założycieli firmy Oculus, Palmer Luckey. Wieku 16 lat zaczął budować swoje pierwsze gogle VR, a kilka lat później założył firmę Oculus i dzięki udanej zbiórce na Kickstarterze jego firma miała fundusze stworzyć swoje pierwsze sklepowe gogle. Po drodze firma wypuściła kilka prototypów dla deweloperów. Sama firma została przejęta przez Facebooka, dzisiaj znana jako Meta, za 2 miliardy dolarów w 2014 roku. Ich pierwsze komercyjne gogle, Oculus Rift, zostały wydane w 2016 roku i kosztowały na start 599 dolarów. W 2017 roku z firmą pożegnał się Palmer Luckey, a obecnie zajmuję się firmą tworzącą technologię obronne. Natomiast kolejnym komercyjnym sprzętem Oculusa był Oculus Go wydanym w 2018 roku jako sprzęt all-in-one, czyli nie wymagały zewnętrznych urządzeń czy przewodów do działania. Gogle dzięki braku potrzeby podłączania komputera czy smartfonu, gogle okazały się ogromną innowacją na rynku sprzętu VR. Koszt gogli zaczynał się od 199 dolarów w dniu premiery. W kolejnym roku zostały wydane dwa nowe rodzaje gogli. Pierwszym był następca Oculusa Rifta, czyli Oculus Rift S kosztującym 400 dolarów. Podobnie jak jego poprzednik były stworzone zmyślą o PCVR. Recenzentom sprzęt też nie przypadł do gustu, zarzucając mu zbyt małą ilość innowacji od poprzedniej wersji. Inaczej było z drugim produktem, który wypuścili w podobnym czasie czyli Oculus Quest. Cena premierowa zaczynała się od 399 dolarów. Quest podobnie jak jego poprzednik nie wymagał żadnych dodatkowych urządzeń do działania. Dzięki dość niskiej cenie, jak za możliwości które oferowały gogle, okazały się one ogromnym sukcesem dla Oculusa na tyle ogromnym, że zaczęły one powoli wypychać swojego brata Rift S z rynku, a gwoździem do trumny dla Rift S było ogłoszenie przez Oculusa, że można będzie Questa podłączyć do PC i korzystać z nich jak Rift S. Sam Oculus od tego momentu zaczął tworzyć tylko gogle autonomiczne. 
 
 \begin{figure}[!ht]%
 	\centering
@@ -163,7 +163,7 @@ W ciągu ostatnich 10 lat rynek gogli VR zaczął się budzić na nowo dzięki j
 
 
 W kolejnym roku, tj. 2020 wypuścili kolejne gogle, czyli Oculus Quest 2 których 
-koszt zaczynał się od 299 USD. Dzięki jeszcze niższej cenie i lepszej mocy w 
+koszt zaczynał się od 299 dolarów. Dzięki jeszcze niższej cenie i lepszej mocy w 
 stosunku do poprzednika stały się najpopularniejszymi goglami na rynku. W ciągu 
 ostatnich dwóch lat Oculus zmienił nazwę na Reality Labs, Facebook na Meta, a Oculus 
 Quest 2 na Meta Quest 2. Obecnie Meta jest firmą próbującą stworzyć swój pierwszy 
@@ -189,10 +189,9 @@ urządzeń. Z czego 78\% były to Meta Quest 2\cite{ilosc_urzadzen}.
 \end{figure}  
 
 
-Rynek aplikacji z myślą o VR też się rozwinął w ciągu ostatnich lat. Firmy 
+Rynek aplikacji VR też się rozwinął w ciągu ostatnich lat. Firmy 
 produkujące silniki do gier takie, jak Epic czy Unity dodały do swoich silników 
-wsparcie VR. Dzięki wparciu od dużych firm rozpoczął się wysyp aplikacji na gogle 
-VR. W oficjalnym sklepie Oculus jest obecnie dostępnych ponad 400 
+wsparcie gogli wirtualnej rzeczywistości. Dzięki wparciu od dużych firm rozpoczął się wysyp róźnego rodzaju aplikacji. W oficjalnym sklepie Oculus jest obecnie dostępnych ponad 400 
 aplikacji\cite{liczba_gier_quest}, na Steam jest ich już ponad 
 4000\cite{liczba_gier_steam}. Oczywiście sam sprzęt nie służy też do rozrywki. Może 
 być też wykorzystywany np. przez wojsko do tworzenia symulacji, czy przez artystów 
@@ -200,10 +199,10 @@ do tworzenia dzieł sztuki lub galerii modelów komputerowych.
 
 \subsection{Cel i zakres pracy}
 
-Głównym założeniem jest stworzenie aplikacji VR która przedstawi kilka wybranych
-modeli komputerowych, dodatkowo będą znajdować się tam informację o modelu w formie galerii w
+Głównym założeniem pracy jest stworzenie aplikacji VR która przedstawi kilka wybranych
+modeli komputerowych. Dodatkowo będą znajdować się tam informację o modelu w formie galerii w
 której znajdować się będzie historia danego modelu i ciekawostki z nim związane.
-Użyte gogle VR do pomocy przy tworzeniu aplikacji to Oculus Quest, aplikacja została natomiast napisana w silniku Unreal Engine oraz w środowisku programistycznym Visual Studio 2022. Silnik UE4 posiada wsparcia dla gogli VR, a także można w nim pisać klasy i skrypty w języku C++ oraz przy wykorzystaniu Blueprintów, jest to wizualny język skryptowy stworzony z myślą o ludziach, którzy nie mieli styczności z językiem programowania. Np. dla game designerów którzy  mogą zrobić proste skrypty, a następnie programista może je przerobić na skrypty C++. Dodatkowo po stronie C++ można stworzyć bazowy system, który może zostać rozszerzony w Blueprintach o funkcje do których dostęp jest łatwiejszy w Blueprintach. Celem niniejszej pracy, jest pokazanie że przy dzisiejszej technologii i wiedzy można stworzyć program w mało wymagający sposób, który nie
+Użyte gogle VR do pomocy przy tworzeniu aplikacji to Oculus Quest. Aplikacja została natomiast napisana w silniku Unreal Engine oraz w środowisku programistycznym Visual Studio 2022. Silnik UE4 posiada wsparcia dla gogli VR, a także można w nim pisać klasy i skrypty w języku C++ oraz przy wykorzystaniu Blueprintów. Jest to wizualny język skryptowy stworzony z myślą o ludziach, którzy nie mieli styczności z językiem programowania, np. dla game designerów którzy  mogą zrobić proste skrypty, a następnie programista może je przerobić na skrypty C++. Dodatkowo po stronie C++ można stworzyć bazowy system, który może zostać rozszerzony w Blueprintach o funkcje do których dostęp jest łatwiejszy w Blueprintach. Celem niniejszej pracy, jest pokazanie że przy dzisiejszej technologii i wiedzy można stworzyć program w sposób, który nie
 byłby możliwy do zrealizowania jeszcze 10 lat temu.
 
 \begin{figure}[H]%
@@ -229,7 +228,7 @@ byłby możliwy do zrealizowania jeszcze 10 lat temu.
 
 \subsection{Wygląd i Obsługa programu}
 
-Aby uruchomić program potrzebną są gogle VR i kontrolery ruchowe, które są wspierane. W programie wspierane są gogle Oculus Quest i kontrolery Oculus Touch. Program podzielony jest na pokoje, gdzie każdy pokój różni się umieszczonym w nim modelem i możliwymi interakcjami z modelem. Po poziomach można poruszać się na dwa sposoby. Pierwszy sposób wymaga użycia lewego drążka. Dzięki odpowiedniemu wychyleniu drążka można poruszać się w odpowiednie miejsce po pokoju. Jednak przez taki sposób poruszania się niektóre osoby mogą nabawić się choroby symulatorowej\cite{choroba_vr}, aby zmniejszyć szansę jej wystąpienia został zastosowany efekt zwany widzeniem tunelowym. Polega on na zmniejszeniu wielkości widocznego obrazu kiedy poruszamy się po planszy. Im mamy większą prędkość tym efekt jest mocniejszy. Drugi sposób poruszania się polega na teleportacji w inne miejsce na planszy. Po kliknięciu przycisku B na prawym kontrolerze pojawi się kółko informujące nas, że po zwolnieniu przycisku teleportujemy się tam. Ten sposób poruszania się jest bardziej wygodny dla osób z chorobą symulatorową.
+Aby uruchomić program potrzebne są gogle VR i kontrolery ruchowe, które są wspierane. W programie wspierane są gogle Oculus Quest i kontrolery Oculus Touch. Program podzielony jest na pokoje, gdzie każdy pokój różni się umieszczonym w nim modelem i możliwymi interakcjami z modelem. Po poziomach można poruszać się na dwa sposoby. Pierwszy sposób wymaga użycia lewego drążka. Dzięki odpowiedniemu wychyleniu drążka można poruszać się w odpowiednie miejsce po pokoju. Jednak przez taki sposób poruszania się niektóre osoby mogą nabawić się choroby symulatorowej\cite{choroba_vr}, aby zmniejszyć szansę jej wystąpienia został zastosowany efekt zwany widzeniem tunelowym. Polega on na zmniejszeniu wielkości widocznego obrazu kiedy poruszamy się po planszy. Im mamy większą prędkość tym efekt jest mocniejszy. Drugi sposób poruszania się polega na teleportacji w inne miejsce na planszy. Po kliknięciu przycisku B na prawym kontrolerze pojawi się kółko informujące nas, że po zwolnieniu przycisku teleportujemy się tam. Ten sposób poruszania się jest bardziej wygodny dla osób z chorobą symulatorową.
 
 \begin{figure}[!ht]%
 	\centering
