Poprawki w tekście  bibliografii
Do poprawki zostały głównie zdjęcia i 4.3

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -1,191 +1,145 @@
 
-@online{popularnosc_gogli,
+@misc{popularnosc_gogli,
   author = {Steam},
   title = {{Ankieta używanego sprzętu na steam}},
   howpublished = "\newline \url{https://store.steampowered.com/hwsurvey}",
-  year = { }
+  note = "[Internet; Data wejścia: 04.04.2022]"
 }
 
-@online{PlayStation_VR2,
-  author = {Sony},
-  title = {{Zapowiedź PlayStation VR2}},
-  howpublished = "\newline \url{https://www.playstation.com/pl-pl/ps-vr2/}",
-  year = { }
-}
 
-@online{porownanie_gogli,
-  author = {VRcompare},
-  title = {{Compare Oculus Quest and Oculus Quest 2}},
-  howpublished = "\newline \url{https://vr-compare.com/compare?h1=pDTZ02PkT&h2=GeZ01ojF8}",
-  year = { }
-}
-
-@online{ilosc_urzadzen,
+@misc{ilosc_urzadzen,
   author = {VRcompare},
   title = {{VR Devices}},
   howpublished = "\newline \url{https://vr-compare.com}",
-  year = { }
+  note = "[Internet; Data wejścia: 04.04.2022]"
 }
 
-@online{liczba_gier_quest,
+@misc{liczba_gier_quest,
   author = {Ben Lang},
   title = {{Quest App Lab Soars to 1,440 Apps, More Than Tripling Those on the Main Store}},
   howpublished = "\newline \url{https://www.roadtovr.com/oculus-quest-app-lab-100-apps-best-rated-most-popular/}",
-  year = { }
+  note = "[Internet; Data wejścia: 05.11.2022]"
 }
 
-@online{liczba_gier_steam,
+@misc{liczba_gier_steam,
   author = {Valve},
   title = {{Steam VR Game List}},
   howpublished = "\newline \url{https://store.steampowered.com/vr}",
-  year = { }
+  note = "[Internet; Data wejścia: 05.11.2022]"
 }
 
-@online{sprzedasz_gogli_VR,
-  author = {IDC},
-  title = {{AR/VR Headset Shipments Grew Dramatically in 2021}},
-  howpublished = "\newline \url{https://www.idc.com/getdoc.jsp?containerId=prUS48969722}",
-  year = { }
-}
-
-@online{choroba_vr,
+@misc{choroba_vr,
   author = {Michał Brzeżański},
   title = {{Choroba Symulatorowa}},
   howpublished = "\newline \url{https://vrpolska.eu/skad-sie-bierze-choroba-symulatorowa/}",
-  year = { }
+  note = "[Internet; Data wejścia: 04.04.2022]"
 }
 
-@online{double_pendulum,
+@misc{double_pendulum,
   author = {Krzysztof Jankowski},
   title = {{Dynamics of double pendulum
 with parametric vertical excitation}},
   howpublished = "\newline \url{https://web.archive.org/web/*/http://www.team.kdm.p.lodz.pl/master/Jankowski.pdf/}",
-  year = { }
+  note = "[Internet; Data wejścia: 05.05.2022]"
 }
 
-@online{double_pendulum_book,
+@misc{double_pendulum_book,
   author = {Gregory L. Baker, James A. Blackburn},
   title = {{The Pendulum A Case Study in Physics}},
   howpublished = "\newline \url{https://www.academia.edu/34415707/The_pendulum_A_case_study_in_physics_pdf_pdf}",
-  year = { }
+  note = "[Internet; Data wejścia: 24.07.2022]"
 }
 
-@online{game_of_life_zero_cellular_automata,
+@misc{game_of_life_zero_cellular_automata,
   author = {Encyklopedia PWN},
   title = {{Automat Komórkowy}},
   howpublished = "\newline \url{https://encyklopedia.pwn.pl/haslo/;3872571}",
-  year = { }
+  note = "[Internet; Data wejścia: 31.07.2022]"
 }
 
-@online{game_of_life_zero_player,
+@misc{game_of_life_zero_player,
   author = {Staffan Björk i Jesper Juul},
   title = {{Zero-Player Games}},
   howpublished = "\newline \url{https://www.jesperjuul.net/text/zeroplayergames/}",
-  year = { }
+  note = "[Internet; Data wejścia: 01.08.2022]"
 }
 
-@online{game_of_life_story,
+@misc{game_of_life_story,
   author = {},
   title = {{Conway's Game of Life}},
   howpublished = "\newline \url{https://conwaylife.com/wiki/Conway's_Game_of_Life}",
-  year = { }
+  note = "[Internet; Data wejścia: 31.07.2022]"
 }
 
-@online{game_of_life_methematical_games,
+@misc{game_of_life_methematical_games,
   author = {Martin Gardner},
   title = {{The fantastic combinations of John
 Conway's new solitaire game "life"}},
   howpublished = "\newline \url{https://web.stanford.edu/class/sts145/Library/life.pdf}",
-  year = { }
+  note = "[Internet; Data wejścia: 01.08.2022]"
 }
 
-@online{game_of_life_rules,
-  author = {Chris Lipa},
-  title = {{Conway's Game of Life}},
-  howpublished = "\newline \url{http://pi.math.cornell.edu/~lipa/mec/lesson6.html}",
-  year = { }
-}
 
-@online{game_of_life,
-  author = {Jędrzej Kołtunowicz},
-  title = {{Gra w życie }},
-  howpublished = "\newline \url{https://www.sztucznainteligencja.org.pl/sztuczna-inteligencja-gra-w-zycie/}",
-  year = { }
-}
-
-@online{game_of_life_wiki,
-  author = {},
-  title = {{Gra w życie }},
-  howpublished = "\newline \url{https://en.wikipedia.org/wiki/Conway's_Game_of_Life/}",
-  year = { }
-}
-
-@online{game_of_life_code,
+@misc{game_of_life_code,
   author = {sweyns},
   title = {{GameOfLife}},
   howpublished = "\newline \url{https://github.com/sweyns/GameOfLife}",
-  year = { }
+  note = "[Internet; Data wejścia: 11.09.2021]"
 }
 
-@online{efekt_motyla,
-  author = {Jarosław Demkowski},
-  title = {{Efekt motyla i dziwne atraktory}},
-  howpublished = "\newline \url{https://web.archive.org/web/20160305054651/http://www-users.mat.umk.pl/~elodymek/Prezentacja.pdf/}",
-  year = { }
-}
 
-@online{burze_motyle,
+@misc{burze_motyle,
   author = {Paul Halpern},
   title = {{O motylach i burzach}},
   howpublished = "\newline \url{https://web.archive.org/web/20100909161235/http://czytelnia.onet.pl/0,1161316,do_czytania.html/}",
-  year = { }
+  note = "[Internet; Data wejścia: 19.05.2022]"
 }
 
-@online{lorenz_dziwne_atraktory,
+@misc{lorenz_dziwne_atraktory,
   author = {Jarosław Demkowski},
   title = {{Efekt motyla i dziwne atraktory}},
   howpublished = "\newline \url{https://silo.tips/download/efekt-motyla-i-dziwne-atraktory}",
-  year = { }
+  note = "[Internet; Data wejścia: 26.07.2022]"
 }
 
-@online{motyle_cpp,
+@misc{motyle_cpp,
   author = {Maciej Matyka},
   title = {{Jak narysować Motyle Lorenza }},
   howpublished = "\newline \url{https://www.youtube.com/watch?v=XZ5QKKxHTXQ/}",
-  year = { }
+  note = "[Internet; Data wejścia: 20.05.2022]"
 }
 
-@online{agent_examples,
+@misc{agent_examples,
   author = {Bassel Karami},
   title = {{Intro to Agent Based Modeling}},
   howpublished = "\newline \url{https://towardsdatascience.com/intro-to-agent-based-modeling-3eea6a070b72}",
-  year = { }
+  note = "[Internet; Data wejścia: 25.05.2022]"
 }
 
-@online{flocking_system,
+@misc{flocking_system,
   author = {Wayne Carlson},
   title = {{Flocking Systems}},
   howpublished = "\newline \url{https://ohiostate.pressbooks.pub/graphicshistory/chapter/19-2-flocking-systems/}",
-  year = { }
+  note = "[Internet; Data wejścia: 31.05.2022]"
 }
 
-@online{boids_reynolds,
+@misc{boids_reynolds,
   author = {Craig Reynolds},
   title = {{Boids}},
   howpublished = "\newline \url{https://www.red3d.com/cwr/boids/}",
-  year = { }
+  note = "[Internet; Data wejścia: 01.06.2022]"
 }
 
-@online{boids_name,
+@misc{boids_name,
   author = {DonHopkins},
   title = {{Boids Name}},
   howpublished = "\newline \url{https://news.ycombinator.com/item?id=22710201}",
-  year = { }
+  note = "[Internet; Data wejścia: 31.05.2022]"
 }
 
-@online{code_boids,
+@misc{code_boids,
   author = {Darman1136},
   title = {{UE4Boids}},
   howpublished = "\newline \url{https://github.com/Darman1136/UE4Boids}",
-  year = { }
+  note = "[Internet; Data wejścia: 12.08.2022]"
 }
