Poprawiono czytelność napisów z reszty zdjęć

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -3,7 +3,7 @@
   author = {Steam},
   title = {{Ankieta używanego sprzętu na steam}},
   howpublished = "\newline \url{https://store.steampowered.com/hwsurvey}",
-  note = "[Internet; Data wejścia: 04.04.2022]"
+  note = "\newline [Internet; Data wejścia: 04.04.2022]"
 }
 
 
@@ -11,28 +11,28 @@
   author = {VRcompare},
   title = {{VR Devices}},
   howpublished = "\newline \url{https://vr-compare.com}",
-  note = "[Internet; Data wejścia: 04.04.2022]"
+  note = "\newline [Internet; Data wejścia: 04.04.2022]"
 }
 
 @misc{liczba_gier_quest,
   author = {Ben Lang},
   title = {{Quest App Lab Soars to 1,440 Apps, More Than Tripling Those on the Main Store}},
   howpublished = "\newline \url{https://www.roadtovr.com/oculus-quest-app-lab-100-apps-best-rated-most-popular/}",
-  note = "[Internet; Data wejścia: 05.11.2022]"
+  note = "\newline [Internet; Data wejścia: 05.11.2022]"
 }
 
 @misc{liczba_gier_steam,
   author = {Valve},
   title = {{Steam VR Game List}},
   howpublished = "\newline \url{https://store.steampowered.com/vr}",
-  note = "[Internet; Data wejścia: 05.11.2022]"
+  note = "\newline [Internet; Data wejścia: 05.11.2022]"
 }
 
 @misc{choroba_vr,
   author = {Michał Brzeżański},
   title = {{Choroba Symulatorowa}},
   howpublished = "\newline \url{https://vrpolska.eu/skad-sie-bierze-choroba-symulatorowa/}",
-  note = "[Internet; Data wejścia: 04.04.2022]"
+  note = "\newline [Internet; Data wejścia: 04.04.2022]"
 }
 
 @misc{double_pendulum,
@@ -40,35 +40,35 @@
   title = {{Dynamics of double pendulum
 with parametric vertical excitation}},
   howpublished = "\newline \url{https://web.archive.org/web/*/http://www.team.kdm.p.lodz.pl/master/Jankowski.pdf/}",
-  note = "[Internet; Data wejścia: 05.05.2022]"
+  note = "\newline [Internet; Data wejścia: 05.05.2022]"
 }
 
 @misc{double_pendulum_book,
   author = {Gregory L. Baker, James A. Blackburn},
   title = {{The Pendulum A Case Study in Physics}},
   howpublished = "\newline \url{https://www.academia.edu/34415707/The_pendulum_A_case_study_in_physics_pdf_pdf}",
-  note = "[Internet; Data wejścia: 24.07.2022]"
+  note = "\newline [Internet; Data wejścia: 24.07.2022]"
 }
 
 @misc{game_of_life_zero_cellular_automata,
   author = {Encyklopedia PWN},
   title = {{Automat Komórkowy}},
   howpublished = "\newline \url{https://encyklopedia.pwn.pl/haslo/;3872571}",
-  note = "[Internet; Data wejścia: 31.07.2022]"
+  note = "\newline [Internet; Data wejścia: 31.07.2022]"
 }
 
 @misc{game_of_life_zero_player,
   author = {Staffan Björk i Jesper Juul},
   title = {{Zero-Player Games}},
   howpublished = "\newline \url{https://www.jesperjuul.net/text/zeroplayergames/}",
-  note = "[Internet; Data wejścia: 01.08.2022]"
+  note = "\newline [Internet; Data wejścia: 01.08.2022]"
 }
 
 @misc{game_of_life_story,
   author = {},
   title = {{Conway's Game of Life}},
   howpublished = "\newline \url{https://conwaylife.com/wiki/Conway's_Game_of_Life}",
-  note = "[Internet; Data wejścia: 31.07.2022]"
+  note = "\newline [Internet; Data wejścia: 31.07.2022]"
 }
 
 @misc{game_of_life_methematical_games,
@@ -76,7 +76,7 @@ with parametric vertical excitation}},
   title = {{The fantastic combinations of John
 Conway's new solitaire game "life"}},
   howpublished = "\newline \url{https://web.stanford.edu/class/sts145/Library/life.pdf}",
-  note = "[Internet; Data wejścia: 01.08.2022]"
+  note = "\newline [Internet; Data wejścia: 01.08.2022]"
 }
 
 
@@ -84,7 +84,7 @@ Conway's new solitaire game "life"}},
   author = {sweyns},
   title = {{GameOfLife}},
   howpublished = "\newline \url{https://github.com/sweyns/GameOfLife}",
-  note = "[Internet; Data wejścia: 11.09.2021]"
+  note = "\newline [Internet; Data wejścia: 11.09.2021]"
 }
 
 
@@ -92,54 +92,54 @@ Conway's new solitaire game "life"}},
   author = {Paul Halpern},
   title = {{O motylach i burzach}},
   howpublished = "\newline \url{https://web.archive.org/web/20100909161235/http://czytelnia.onet.pl/0,1161316,do_czytania.html/}",
-  note = "[Internet; Data wejścia: 19.05.2022]"
+  note = "\newline [Internet; Data wejścia: 19.05.2022]"
 }
 
 @misc{lorenz_dziwne_atraktory,
   author = {Jarosław Demkowski},
   title = {{Efekt motyla i dziwne atraktory}},
   howpublished = "\newline \url{https://silo.tips/download/efekt-motyla-i-dziwne-atraktory}",
-  note = "[Internet; Data wejścia: 26.07.2022]"
+  note = "\newline [Internet; Data wejścia: 26.07.2022]"
 }
 
 @misc{motyle_cpp,
   author = {Maciej Matyka},
   title = {{Jak narysować Motyle Lorenza }},
   howpublished = "\newline \url{https://www.youtube.com/watch?v=XZ5QKKxHTXQ/}",
-  note = "[Internet; Data wejścia: 20.05.2022]"
+  note = "\newline [Internet; Data wejścia: 20.05.2022]"
 }
 
 @misc{agent_examples,
   author = {Bassel Karami},
   title = {{Intro to Agent Based Modeling}},
   howpublished = "\newline \url{https://towardsdatascience.com/intro-to-agent-based-modeling-3eea6a070b72}",
-  note = "[Internet; Data wejścia: 25.05.2022]"
+  note = "\newline [Internet; Data wejścia: 25.05.2022]"
 }
 
 @misc{flocking_system,
   author = {Wayne Carlson},
   title = {{Flocking Systems}},
   howpublished = "\newline \url{https://ohiostate.pressbooks.pub/graphicshistory/chapter/19-2-flocking-systems/}",
-  note = "[Internet; Data wejścia: 31.05.2022]"
+  note = "\newline [Internet; Data wejścia: 31.05.2022]"
 }
 
 @misc{boids_reynolds,
   author = {Craig Reynolds},
   title = {{Boids}},
   howpublished = "\newline \url{https://www.red3d.com/cwr/boids/}",
-  note = "[Internet; Data wejścia: 01.06.2022]"
+  note = "\newline [Internet; Data wejścia: 01.06.2022]"
 }
 
 @misc{boids_name,
   author = {DonHopkins},
   title = {{Boids Name}},
   howpublished = "\newline \url{https://news.ycombinator.com/item?id=22710201}",
-  note = "[Internet; Data wejścia: 31.05.2022]"
+  note = "\newline [Internet; Data wejścia: 31.05.2022]"
 }
 
 @misc{code_boids,
   author = {Darman1136},
   title = {{UE4Boids}},
   howpublished = "\newline \url{https://github.com/Darman1136/UE4Boids}",
-  note = "[Internet; Data wejścia: 12.08.2022]"
+  note = "\newline [Internet; Data wejścia: 12.08.2022]"
 }
