Poprawki grafik i cytatu Lorenza

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -102,6 +102,13 @@ Conway's new solitaire game "life"}},
   note = "\newline [Internet; Data wejścia: 26.07.2022]"
 }
 
+@misc{lorenz_praca,
+  author = {Edward N.Lorenz},
+  title = {{The Essence of Chaos}},
+  howpublished = "\newline \url{https://eclass.uoa.gr/modules/document/file.php/PHYS289/%CE%92%CE%B9%CE%B2%CE%BB%CE%AF%CE%B1/Edward%20N.%20Lorenz%20-%20The%20Essence%20of%20Chaos-CRC%20%282005%29.pdf}",
+  note = "\newline [Internet; Data wejścia: 11.04.2023]"
+}
+
 @misc{motyle_cpp,
   author = {Maciej Matyka},
   title = {{Jak narysować Motyle Lorenza }},
