--- a/dyplomWFAMarcinPietrzak.tex
+++ b/dyplomWFAMarcinPietrzak.tex
@@ -139,7 +139,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
 
 \subsection{Wprowadzenie}
 
-W ciągu ostatnich 10 lat rynek gogli VR zaczął się budzić na nowo dzięki jednemu z ojców założycieli firmy Oculus, Palmer Luckey. Wieku 16 lat zaczął budować swoje pierwsze gogle VR, a kilka lat później założył firmę Oculus i dzięki udanej zbiórce na Kickstarterze jego firma miała fundusze stworzyć swoje pierwsze sklepowe gogle. Po drodze firma wypuściła kilka prototypów dla deweloperów. Sama firma została przejęta przez Facebooka, dzisiaj znana jako Meta, za 2 miliardy dolarów w 2014 roku. Ich pierwsze komercyjne gogle, Oculus Rift, zostały wydane w 2016 roku i kosztowały na start 599 dolarów. W 2017 roku z firmą pożegnał się Palmer Luckey, a obecnie zajmuję się firmą tworzącą technologię obronne. Natomiast kolejnym komercyjnym sprzętem Oculusa był Oculus Go wydanym w 2018 roku jako sprzęt all-in-one, czyli nie wymagały zewnętrznych urządzeń czy przewodów do działania. Gogle dzięki braku potrzeby podłączania komputera czy smartfonu, gogle okazały się ogromną innowacją na rynku sprzętu VR. Koszt gogli zaczynał się od 199 dolarów w dniu premiery. W kolejnym roku zostały wydane dwa nowe rodzaje gogli. Pierwszym był następca Oculusa Rifta, czyli Oculus Rift S kosztującym 400 dolarów. Podobnie jak jego poprzednik były stworzone zmyślą o PCVR. Recenzentom sprzęt też nie przypadł do gustu, zarzucając mu zbyt małą ilość innowacji od poprzedniej wersji. Inaczej było z drugim produktem, który wypuścili w podobnym czasie czyli Oculus Quest. Cena premierowa zaczynała się od 399 dolarów. Quest podobnie jak jego poprzednik nie wymagał żadnych dodatkowych urządzeń do działania. Dzięki dość niskiej cenie, jak za możliwości które oferowały gogle, okazały się one ogromnym sukcesem dla Oculusa na tyle ogromnym, że zaczęły one powoli wypychać swojego brata Rift S z rynku, a gwoździem do trumny dla Rift S było ogłoszenie przez Oculusa, że można będzie Questa podłączyć do PC i korzystać z nich jak Rift S. Sam Oculus od tego momentu zaczął tworzyć tylko gogle autonomiczne. 
+W ciągu ostatnich 10 lat rynek gogli VR zaczął się budzić na nowo dzięki jednemu z ojców założycieli firmy Oculus, Palmer Luckey. Wieku 16 lat zaczął budować swoje pierwsze gogle VR, a kilka lat później założył firmę Oculus i dzięki udanej zbiórce na Kickstarterze jego firma miała fundusze stworzyć swoje pierwsze sklepowe gogle. Po drodze firma wypuściła kilka prototypów dla deweloperów. Sama firma została przejęta przez Facebooka, dzisiaj znana jako Meta, za 2 miliardy dolarów w 2014 roku. Ich pierwsze komercyjne gogle, Oculus Rift, zostały wydane w 2016 roku i kosztowały na start 599 dolarów. W 2017 roku z firmą pożegnał się Palmer Luckey, a obecnie zajmuję się firmą tworzącą technologię obronne. Natomiast kolejnym komercyjnym sprzętem Oculusa był Oculus Go wydanym w 2018 roku jako sprzęt all-in-one, czyli nie wymagały zewnętrznych urządzeń, czy przewodów do działania. Gogle dzięki brakowi potrzeby podłączania komputera, czy smartfonu. Oculus Go okazały się ogromną innowacją na rynku sprzętu VR. Koszt gogli zaczynał się od 199 dolarów w dniu premiery. W kolejnym roku zostały wydane dwa nowe rodzaje gogli. Pierwszym był następca Oculusa Rifta, czyli Oculus Rift S kosztującym 400 dolarów. Podobnie jak jego poprzednik były stworzone zmyślą o PCVR. Recenzentom sprzęt też nie przypadł do gustu, zarzucając mu zbyt małą ilość innowacji od poprzedniej wersji. Inaczej było z drugim produktem, który wypuścili w podobnym czasie, czyli Oculus Quest. Cena premierowa zaczynała się od 399 dolarów. Quest, podobnie jak jego poprzednik nie wymagał żadnych dodatkowych urządzeń do działania. Dzięki dość niskiej cenie, jak za możliwości, które oferowały gogle, okazały się one ogromnym sukcesem dla Oculusa na tyle ogromnym, że zaczęły one powoli wypychać swojego brata Rift S z rynku, a gwoździem do trumny dla Rift S było ogłoszenie przez Oculusa, że można będzie Questa podłączyć do PC i korzystać z nich jak Rift S. Sam Oculus od tego momentu zaczął tworzyć tylko gogle autonomiczne.
 
 \begin{figure}[!ht]%
 	\centering
@@ -595,7 +595,8 @@ Po lewej stronie od tablicy z komórkami znajduję się widżet, na którym moż
 \newpage
 \subsection{Efekt Motyla}
 
-"Dowolny układ fizyczny, który zachowuje się nieokresowo, jest nieprzewidywalny." Są to słowa Edwarda Lorenza, meteorologa który jako pierwszy odkrył, że nie można zrobić dobrej prognozy pogody na dłużej niż kilka dni do przodu. W 1960 roku pracował on nad programem komputerowym który miał prognozować pogodę, na podstawie zbioru równań określających zależności między prędkością wiatru, temperaturą, ciśnieniem i wilgotnością \cite{burze_motyle}. Gdy Lorenz testował swój program po wprowadzeniu danych i po wydrukowaniu wyniku w formie wykresu. Rozkład maksimów i minimów na wykresie wyglądał tak, jak się tego spodziewał Edward. Postanowił jednak ponownie zbadać wyniki, dlatego uruchomił program ponownie, wprowadzając jak myślał takie same wyniki \cite{burze_motyle}. Okazało się jednak, że wyniki wyszły na odwrót. Po sprawdzeniu danych zauważył, że podał je w postaci przybliżonej z mniejszą liczbą cyfr po przecinku. Było to dla niego tak ciekawe, że spróbował to samo z innymi zbiorami danych i zaobserwował identyczne zjawisko. Lorenz w ten sposób odkrył "efekt motyla", gdzie dla pewnych układów deterministycznych nawet minimalne zmiany wartości danych początkowych zostają bardzo szybko wzmocnione i powodują ogromne zmiany w ewolucji układu \cite{burze_motyle}.
+"Czy trzepot skrzydeł motyla w Brazylii może wywołać tornado w Teksasie?" Jest to pytanie Edwarda Lorenza, meteorologa który zadał je na 139 spotkaniu American Association for the Advancement of Science w stolicy USA w 1972 roku\cite{lorenz_praca}.
+Lorenz jako pierwszy odkrył, że nie można zrobić dobrej prognozy pogody na dłużej niż kilka dni do przodu. W 1960 roku pracował on nad programem komputerowym który miał prognozować pogodę, na podstawie zbioru równań określających zależności między prędkością wiatru, temperaturą, ciśnieniem i wilgotnością \cite{burze_motyle}. Gdy Lorenz testował swój program po wprowadzeniu danych i po wydrukowaniu wyniku w formie wykresu. Rozkład maksimów i minimów na wykresie wyglądał tak, jak się tego spodziewał Edward. Postanowił jednak ponownie zbadać wyniki, dlatego uruchomił program ponownie, wprowadzając jak myślał takie same wyniki \cite{burze_motyle}. Okazało się jednak, że wyniki wyszły na odwrót. Po sprawdzeniu danych zauważył, że podał je w postaci przybliżonej z mniejszą liczbą cyfr po przecinku. Było to dla niego tak ciekawe, że spróbował to samo z innymi zbiorami danych i zaobserwował identyczne zjawisko. Lorenz w ten sposób odkrył "efekt motyla", gdzie dla pewnych układów deterministycznych nawet minimalne zmiany wartości danych początkowych zostają bardzo szybko wzmocnione i powodują ogromne zmiany w ewolucji układu \cite{burze_motyle}.
 
 \begin{figure}[H]%
 \centering
@@ -667,7 +668,7 @@ W BP\_ButterflySpawner w której ustawiamy ilość tworzonych atraktorów ich de
 %
 \qquad
 \end{figure} 
-
+\newpage
 \subsubsection{Efekt Motyla - Wygląd symulacji w projekcie}
 
 W programie użytkownik może obserwować układ Lorenza z wybranymi parametrami dla atraktorów[\ref{ButterflyVariables}], łącznie ze ścieżka, po jakiej się poruszają się atraktory. Dzięki temu może zobaczyć jak zmienia się zachowanie układu po zmienieniu wartości zmiennych
@@ -772,12 +773,12 @@ W programie za pomocą kontrolerów możemy wyciągać agentów z SpawnBoxów i 
 	\begin{subfigure}{.5\textwidth}
 		\centering
 		\includegraphics[width=0.8\linewidth]{graphics//agent/AgentInUE_1.png}
-		\caption{SpawnBoxy w programie}	
+		\caption{Plansza w programie}	
 		\label{ref:subref_a}
 	\end{subfigure}%
 	\begin{subfigure}{.5\textwidth}
 		\centering
-		\includegraphics[width=0.8\linewidth]{graphics//agent/AgentInUE_1.png}
+		\includegraphics[width=0.8\linewidth]{graphics//agent/AgentInUE_2.png}
 		\caption{Wyciąganie agenta z SpawnBoxu}
 		\label{ref:subref_b}
 	\end{subfigure}%
@@ -790,13 +791,13 @@ Każdego agenta z SpawnBoxu możemy położyć w dowolnym miejscu na planszy. Ki
 	\centering
 	\begin{subfigure}{.5\textwidth}
 		\centering
-		\includegraphics[width=0.8\linewidth]{graphics//agent/AgentInUE_1.png}
+		\includegraphics[width=0.8\linewidth]{graphics//agent/AgentInUE_3.png}
 		\caption{Kładzenie agenta na planszy}	
 		\label{ref:subref_a}
 	\end{subfigure}%
 	\begin{subfigure}{.5\textwidth}
 		\centering
-		\includegraphics[width=0.8\linewidth]{graphics//agent/AgentInUE_1.png}
+		\includegraphics[width=0.8\linewidth]{graphics//agent/AgentInUE_4.png}
 		\caption{Plansza z agentami}
 		\label{ref:subref_b}
 	\end{subfigure}%
@@ -804,17 +805,6 @@ Każdego agenta z SpawnBoxu możemy położyć w dowolnym miejscu na planszy. Ki
 \end{figure}
 
 Symulację uruchamiamy poprzez najechanie kontrolerem na przycisk start który znajduję się na widgecie przed planszą. Symulacja będzie trwać dopóki nie wyłączymy jej drugim przyciskiem. Podczas symulacji agenci będą się poruszać zgodnie z zachowaniami, jakie zostały stworzone w kodzie.
-
-\begin{figure}[H]%
-\centering
-\includegraphics[width=0.5\columnwidth]{graphics/agent/AgentInUE_1.png}
-\caption{Wygląd symulacji w trakcie jej działania
-\label{BPExample}}%
-%
-\qquad
-\end{figure}  
-
-
 
 \newpage
 \subsection{Ptaki (Boids)}
@@ -972,7 +962,9 @@ Po kliknięciu na prawym kontrolerze spustu możemy zmienić położenie celu do
 
 
 \newpage
-\section{Nie realizacja, a co było jeszcze robione - tytuł do wymyślenia}
+\section{Inne rzeczy tworzone do projektu}
+
+\subsubsection{AVRCharacter - Postać gracza}
 
 Jedną z pierwszych rzeczy stworzonych w projekcie była klasa odpowiedzialna za poruszanie się postaci. Klasa AVRCharacter jest dzieckiem klasy ACharacter. Klasa jest "pionkiem", którym może sterować gracz. Jest fizyczną reprezentacją gracza na poziomie z wbudowaną informacją o meshu, kolizji i logice ruchu. W klasie tej znajdują się wszystkie informacje potrzebne postaci w tym informacja o klasie kontrolerów ruchu, które w zależności od mapy na którym są modele, różnią się miedzy sobą. Metoda SetupPlayerInputComponent, która jest metodą wirtualną, jest wywołana w celu powiązania metod klasy z przyciskami, które zdefiniowaliśmy w ustawieniach projektu. 
 
@@ -1001,6 +993,8 @@ Kolejną strukturą jest FPredictProjectilePathResult. Jest to kontener na wynik
 tym, jak wygląda cała przewidziana ścieżka dla naszej teleportacji i miejsce w które uderzy. Dodatkowo sprawdzana jest jeszcze czy nasz punkt trafi w miejsce gdzie możemy spokojnie się teleportować poprzez sprawdzenie czy w miejscu teleportacji jest navmesh. Jeśli tak, to po puszczeniu przycisku na kontrolerze zostaniemy teleportowani w miejsce gdzie wskazaliśmy.
 
 \lstinputlisting[caption=Metoda do znajdowania miejsca gdzie będziemy się teleportować, label={lst:listing-cpp}, language=C++]{code/05/AVRCharacterFindTeleportDestination.cpp}
+
+\subsubsection{Pokój galerii w programie}
 
 Ostatnie co zostało stworzone do projektu to pokoje (mapy) na których zostały umieszczone modele. Każdy pokój został podzielony na dwa segmenty. W pierwszym segmencie użytkownik może przeczytać informację o modelu na którego poziomie się znajduję. W drugim segmencie może zobaczyć jak dany model działa oraz uruchomić dany model.
 
