--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -81,7 +81,7 @@ Conway's new solitaire game "life"}},
 
 
 @misc{game_of_life_code,
-  author = {sweyns},
+  author = {Steve Weyns},
   title = {{GameOfLife}},
   howpublished = "\newline \url{https://github.com/sweyns/GameOfLife}",
   note = "\newline [Internet; Data wejścia: 11.09.2021]"
