--- a/dyplomWFAMarcinPietrzak.tex
+++ b/dyplomWFAMarcinPietrzak.tex
@@ -508,7 +508,7 @@ Na podstawie powyższych klas zostały stworzone klasy BluePrintowe, które moż
 
 BP\_GridActor2D jest klasą BluePrint, która znajdzie się na poziomie gry. W klasie ustawiamy, na jaką szerokość i wysokość ma zostać stworzona siatka składająca się z BP\_CellActor oraz dodajemy widget, dzięki któremu możemy sterować symulacją:
 
-\begin{figure}[!ht]%
+\begin{figure}[H]%
 \centering
 \includegraphics[width=0.6\columnwidth]{graphics/gameoflife/GridActor2DInUE_1.png}
 \caption{Ustawienia BP\_GridActor2D.
@@ -520,9 +520,9 @@ BP\_GridActor2D jest klasą BluePrint, która znajdzie się na poziomie gry. W k
 
 Klasa WBP\_GameOfLifeControll jest odpowiedzialna kontakt między użytkownikiem a programem, klasa ta jest widgetem, dzięki któremu poprzez najechanie kontrolerem ruchowym na odpowiednie opcje możemy włączyć symulację, przyśpieszyć lub ją spowolnić oraz zresetować do stanu początkowego:
 
-\begin{figure}[!ht]%
+\begin{figure}[H]%
 \centering
-\includegraphics[width=0.7\columnwidth]{graphics/gameoflife/GameOfLifeControllInUE_1.png}
+\includegraphics[width=0.5\columnwidth]{graphics/gameoflife/GameOfLifeControllInUE_1.png}
 \caption{Wygląd widgetu w programie.
 \label{BPExample}}%
 %
@@ -549,9 +549,10 @@ W programie za pomocą kontrolerów możemy ustawić stan początkowy każdej ko
 \label{ref:ref}
 \end{figure}
 
+
 Po lewej stronie od tablicy z komórkami znajduje się widżet, za pomocą którego możemy włączyć grę, przyśpieszyć jej działanie lub spowolnić, albo zresetować komórki do stanu początkowego. 
 
-\begin{figure}[!ht]%
+\begin{figure}[H]%
 	\centering
 	\begin{subfigure}{.5\textwidth}
 		\centering
