--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -105,9 +105,10 @@ Conway's new solitaire game "life"}},
 @misc{lorenz_praca,
   author = {Edward N.Lorenz},
   title = {{The Essence of Chaos}},
-  howpublished = "\newline \url{https://eclass.uoa.gr/modules/document/file.php/PHYS289/%CE%92%CE%B9%CE%B2%CE%BB%CE%AF%CE%B1/Edward%20N.%20Lorenz%20-%20The%20Essence%20of%20Chaos-CRC%20%282005%29.pdf}",
-  note = "\newline [Internet; Data wejścia: 11.04.2023]"
+  howpublished = "\newline Jessie and John Danz Lecture Series",
+  note = "\newline [Data Wydania: 1993]\newline [Wydawca: University of Washington Press]"
 }
+
 
 @misc{motyle_cpp,
   author = {Maciej Matyka},
